// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButtonDelete should pass on props 1`] = `
<Fragment>
  <Styled(styled.button)
    anotherProp="test"
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    <IconText
      hideText={false}
      icon="SvgrURL"
    >
      Delete
    </IconText>
  </Styled(styled.button)>
</Fragment>
`;

exports[`IconButtonDelete should wrap in tooltip when text is hidden 1`] = `
<DeleteTooltip>
  <Styled(styled.button)
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    <IconText
      hideText={true}
      icon="SvgrURL"
    >
      Delete
    </IconText>
  </Styled(styled.button)>
</DeleteTooltip>
`;
